New fixes after review
Signed-off-by: Giovanni Ferrari <giovanni.ferrari@soft.it>